# university-eduterm

./: .gitignore  README.md  platformio.ini
eduterm/: .gitignore  platformio.ini
eduterm/include/: monitor.h
eduterm/lib/lcd_esp/: lcd_esp.cpp  lcd_esp.h
eduterm/src/: buzzer.cpp  buzzer.h  config.h  display.h  joystick.cpp  main.cpp
include/: README.md
lib/: README.md
lib/lcd_esp/: regio.cpp  regio.h
server/: .gitignore  CMakeLists.txt
server/src/: dataframe.h  reader.c  semaphore.cpp  semaphore.h  shared_memory.cpp  shared_memory.h  writer.c
src/: buzzer.cpp  buzzer.h  display.cpp  display.h  joystick.h  main.cpp  semaphore.cpp  status_led.cpp  status_led.h
test/: README.md
writer/: .gitignore  CMakeLists.txt
writer/src/: sharedmemory.cpp  sharedmemory.h
